[package]
name = "web_crawler_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.17"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.4" 
